<resources>
    <string name="rupee_symbol">\u20B9</string>
    <string name="Smooch_activityConversation">Messages</string>
    <string name="Smooch_startOfConversation">This is the start of your conversation with the team.</string>
    <string name="Smooch_welcome">Feel free to leave us a message about anything that\'s on your mind.</string>
    <string name="Smooch_messageHint">Type a message…</string>
    <string name="Smooch_settings_notificationIntent">io.smooch.ui.ConversationActivity</string>
    <string name="app_name">Impact</string>
    <string name="main_activity">MainActivity</string>
    <string name="news_activity">NewsActivity</string>
    <string name="events_activity">EventsActivity</string>
    <string name="rfac_activity">RfacActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_feed">Feed</string>
    <string name="run_fragment_title">Run for a cause</string>
    <string name="main_title">SHARE</string>
    <string name="news_title">Good NEws</string>
    <string name="news_sub_title">Sharing Smiles</string>
    <string name="news_desc">See the good happening out there</string>
    <string name="news_read_more">Read More</string>
    <string name="news_share_now">Share Now</string>
    <string name="news_pipe_separator">|</string>
    <string name="event_title">Events</string>
    <string name="event_sub_title">Do good Feel good</string>
    <string name="event_desc">It\'s your turn to start doing</string>
    <string name="is_proud_to_sponsor_your_workout">is proud to sponsor your workout</string>
    <string name="event_detail_description">Description</string>
    <string name="event_detail_location">Description</string>
    <string name="event_detail_from">From</string>
    <string name="event_detail_to">To</string>
    <string name="event_navigate">Navigate</string>
    <string name="rfac_title">Run For A Cause</string>
    <string name="rfac_sub_title">You Run, We Contribute</string>
    <string name="rfac_desc">Your meters will get converted to charity</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="rfac_begin_run">LET\'S GO</string>
    <string name="workout_history">WORKOUT HISTORY</string>
    <string name="finish_workout">Finish workout?</string>
    <string name="finish_workout_message">Are you sure you want to end Workout?</string>
    <string name="exit_league_title">Exit League?</string>
    <string name="exit_league_message">Are you sure you want to exit %1$s.</string>
    <string name="usain_bolt_force_exit_popup_title">In a vehicle or cycling</string>
    <string name="usain_bolt_force_exit_popup_content">We have stopped your workout. Please start tracking while running/walking</string>
    <string name="usain_bolt_force_exit_with_auto_flag_popup_title">In a vehicle or cycling</string>
    <string name="usain_bolt_force_exit_with_auto_flag_popup_content">We have stopped your workout and it won\'t been counted for charity.\nContact Help Center for any query. </string>
    <string name="mock_location_detected">Mock location detected!</string>
    <string name="mock_location_detected_content">Disable mock location to proceed. We have made a record of it, please don\'t try it again.</string>
    <string name="auto_flag_workout">Something\’s Not Right!</string>
    <string name="auto_flag_workout_content">Our algorithm has detected a \"Superhuman Run\". This workout won\'t been counted for charity.\nContact Help Center for any query. </string>
    <string name="rfac_usain_bolt_message_with_distance">We have detected that you are in a vehicle or cycling, erasing last %1$s %2$s from your workout</string>
    <string name="rfac_usain_bolt_message_without_distance">We have detected that you are in a vehicle or cycling, pausing your workout</string>
    <string name="rfac_lazy_ass_message">Don\'t be too lazy, move your ass!</string>
    <string name="rfac_too_slow_message">You need to be a little more faster!</string>
    <string name="rfac_gps_disabled_message">Please enable GPS Location and then Resume</string>
    <string name="pause">PAUSE</string>
    <string name="resume">RESUME</string>
    <string name="finish">FINISH</string>
    <string name="cause_brief">We teach kids every day for two hours. Our focus is value based education which includes teaching and manners, inculcating sense of hygeine and helping attitude and help them realise and achieve their dreams.</string>
    <string name="feedback">Feedback</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="gmail">Gmail</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="google_plus">Google</string>
    <string name="share">SHARE</string>
    <string name="share_skip">DON’T WANT TO SHARE?</string>
    <string name="login_skip">DON’T WANT TO LOGIN?</string>
    <string name="cause_type">Education</string>
    <string name="tap_to_continue">Tap to continue</string>
    <string name="tap_to_start">Tap to start now</string>
    <string name="Profile">You are awesome! You have impacted life of 12 children uptill now</string>
    <string name="Description">Shwas is an effort started by a group of volunteers to educate the underprivileged kids of Gulbai Tekra, Ahmedabad since year 2009. We attempt to provide safe and healthy environment to children coming from disadvantaged families, so that they can openly share with us the challenges they face that hold them back from aspiring their dreamsWe teach kids every day for two hours. Our focus is value based education which includes teaching manners, inculcating sense of hygiene and helping them to follow and fulfil their dreams.</string>
    <string name="mini_description">Shwas is an effort started by a group of volunteers to educate the underprivileged kids of Gulbai Tekra, Ahmedabad since year 2009. We attempt to provide safe and healthy environment to children coming from disadvantaged families, so that they can openly</string>
    <string name="share_screen_description">I just created impact by running 12Kms for the cause. Nike is proud tosponsor the cause. </string>
    <string name="facebook_app_id">167918020276053</string>
    <string name="fb_login_protocol_scheme">fb167918020276053</string>
    <string name="login_error">Login error, try again!</string>
    <string name="some_error">Some error occurred, Please try again.</string>
    <string name="email_id_required">Email id require for login.</string>
    <string name="cant_find_music_application">Can\'t find music application</string>
    <string name="impact_run">impact run</string>
    <string name="overview">Overview</string>
    <string name="thats_awesome">That\'s Awesome!</string>
    <string name="impact_camel_case">Impact</string>
    <string name="duration">Duration</string>
    <string name="tell_about_us">Tell your friends about it</string>
    <string name="submit">submit</string>
    <string name="twitter_comsumer_key">gQYNGkCG72kY2iTUNGLkGEzZF</string>
    <string name="twitter_comsumer_secret">OwhqBKJL3eLYdmRtIa4KZuMQAWxAAGEJxSYeZuWFC3uShcCQhS</string>
    <string name="something_not_right">Something\'s not right !</string>
    <string name="logn_with_fb">LOGIN WITH FACEBOOK</string>
    <string name="logn_with_google">LOGIN WITH GOOGLE</string>
    <string name="profile">Profile</string>
    <string name="achievements">Achievements</string>
    <string name="in_progress">In-Progress</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="discard_changes">Discard changes?</string>
    <string name="impact_runs">Walks &amp; Runs</string>
    <string name="members">Members</string>
    <string name="login">Login</string>
    <string name="leaderboard">Leader Board</string>
    <string name="share_msg">I use Impact to track my daily walks/runs and \'do good\' for society with every step. Check it out. It\'s amazing! www.onelink.to/impact</string>
    <string name="logout">Logout</string>
    <string name="logout_msg">You will lose your streak on logging out. Are you sure you want to log out?</string>
    <string name="logout_button">Yes, I\'m sure</string>
    <string name="share_login_msg">Please login to \n unleash your impact</string>
    <string name="login_skip_msg">Your workout will not convert into impact for the charity. Are you sure you don\'t want to login?</string>
    <string name="skip_login_title">Login to make it count</string>
    <string name="yes_sure">Yes, I\'m sure</string>
    <string name="retry">Retry</string>
    <string name="feedback_thanks">Thank you for the feedback. Your ideas help us grow faster.</string>
    <string name="faq_thanks">Thank you for the query.</string>
    <string name="server_client_id">159550091621-ja0nfl97se4qeeqcc4950fdqu20b5ipj.apps.googleusercontent.com</string>
    <string name="dialog_title_min_distance">That\'s too short!</string>
    <string name="dialog_msg_min_distance">You need to cover a minimum of %1$d %2$s to convert the distance into impact.</string>
    <string name="dialog_positive_button_min_distance">CONTINUE</string>
    <string name="dialog_negative_button_min_distance">END</string>
    <string name="title_about_us">About us</string>
    <string name="title_faq">FAQ</string>
    <string name="km">km</string>
    <string name="distance_km">DISTANCE (%1$s)</string>
    <string name="url_play_store_with_utm">https://goo.gl/4rgqnh</string>
    <string name="title_cause">Causes</string>
    <string name="title_activity_on_boarding">OnBoardingActivity</string>
    <string name="onboarding_title_1">pick</string>
    <string name="onboarding_title_2">RUN OR WALK</string>
    <string name="onboarding_title_3">RAISE</string>
    <string name="onboarding_title_4">DONE</string>
    <string name="onboarding_msg_1">Choose a cause you wish to support.</string>
    <string name="onboarding_msg_2">Begin your outdoor run (or walk) &amp; watch as your steps&#8230;</string>
    <string name="secret_code_text">Enter the secret code here.</string>
    <string name="spread_the_love">SPREAD THE LOVE !</string>
    <string name="spread_love_message">Nice ! Glad you loved it. Please help us spread the word.</string>
    <string name="share_app">SHARE APP</string>
    <string name="tell_friends">TELL YOUR FRIENDS</string>
    <string name="rate_us_message">Thank You .\nRate us on play store, tell others about your experience.</string>
    <string name="rate_us">Rate Us</string>
    <string name="impact_league_description">Here, secret code is for Impact League.\nImpact League is a Walkathon oraganised by us where you and your colleagues compete with each other to raise charity.\nWalk. Help. Win!\n\nGreat idea right?\nTo know more shoot us a mail at contact@impactrun.com\n\nSee you there.</string>
    <string name="whats_this">What\'s This?</string>
    <string name="awesome">AWESOME!</string>
    <string name="rate_us_5">Rate us 5</string>
    <string name="share_the_app">Share the app</string>
    <string name="welcome">Welcome</string>
    <string name="life_as_change_maker">Your journey as a changemaker\nbegins now.</string>
    <string name="every_step">Every step you take will bring\na smile on someone\'s face.</string>
    <string name="share_a_meal_challenge_header">Invite and Share a meal\nChallenge</string>
    <string name="share_a_meal_challenge_text">Take part in Share a meal challenge.\nWith every changemaker you invite to\nImpact app. Landmark group will share\na meal to a hungry child.</string>
    <string name="share_a_meal_challenge">Share a Meal\nChallenge</string>
    <string name="powered_by">powered by</string>
    <string name="share_a_meal_challenge_description">Invite your friends and feed kids with %1$s. %2$d days to go. Spread the word!</string>
    <string name="total_meals_by_you">Total meals by you : </string>
</resources>