<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.sharesmile.share.views.LBTextView
        android:id="@+id/welcome_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="36sp"
        android:layout_marginTop="22dp"
        android:textColor="@color/clr_cb050505"
        />
    <com.sharesmile.share.views.LRTextView
        android:id="@+id/change_maker_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_tv"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="36dp"
        android:text="@string/life_as_change_maker"
        android:textColor="@color/clr_cb050505"
        android:textSize="14sp"
        />
    <com.sharesmile.share.views.LRTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/change_maker_tv"
        android:text="@string/every_step"
        android:textColor="@color/clr_cb050505"
        android:textSize="14sp"
        android:id="@+id/change_maker_tv_2"
        />
</RelativeLayout>