<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <com.sharesmile.share.views.MLTextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/secret_code_text"
        android:textColor="@color/purplish_brown"
        android:textSize="14sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/code_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:hint="eg. EWRIT4">

        <EditText
            android:id="@+id/secret_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textColor="@color/greyish_brown_two"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>


    <com.sharesmile.share.views.MLButton
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <com.sharesmile.share.views.MRTextView
        android:id="@+id/tv_whats_this"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/whats_this"
        android:textColor="@color/greyish_brown_two"
        android:textSize="14sp" />

    <com.sharesmile.share.views.MLTextView
        android:id="@+id/tv_impact_league_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/impact_league_description"
        android:textColor="@color/greyish_brown_two"
        android:textSize="14sp" />

</LinearLayout>