<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    >
    <com.sharesmile.share.views.LBTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_a_meal_challenge_header"
        android:gravity="center"
        android:textColor="@color/black_64"
        android:textSize="28sp"
        android:layout_weight="2"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/badge_image"
        />
    <com.sharesmile.share.views.LBTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_a_meal_challenge_text"
        android:gravity="center"
        android:textColor="@color/black_50"
        android:textSize="@dimen/text_size_16sp"
        android:layout_weight="1"
        />
    <LinearLayout
        android:id="@+id/share_code_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/refer_code_bg"
        >
        <com.sharesmile.share.views.LBTextView
            android:id="@+id/share_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="NIKHI98564"
            android:textSize="18dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:textColor="@color/colorAccent"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_share_white_24px"
            android:background="@drawable/refer_code_share_bg"
            android:padding="15dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:weightSum="4"
        >
        <com.sharesmile.share.views.LRTextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            android:drawableTop="@drawable/facebook"
            android:textColor="@color/black_38"
            android:textSize="12sp"
            android:drawablePadding="15dp"
            android:id="@+id/share_facebook"
            android:layout_weight="1"
            android:gravity="center"
            />
        <com.sharesmile.share.views.LRTextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/whatsapp"
            android:drawableTop="@drawable/facebook"
            android:textColor="@color/black_38"
            android:textSize="12sp"
            android:drawablePadding="15dp"
            android:id="@+id/share_whatsapp"
            android:layout_weight="1"
            android:gravity="center"
            />
        <com.sharesmile.share.views.LRTextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/twitter"
            android:drawableTop="@drawable/facebook"
            android:textColor="@color/black_38"
            android:textSize="12sp"
            android:drawablePadding="15dp"
            android:id="@+id/share_twitter"
            android:layout_weight="1"
            android:gravity="center"
            />
        <com.sharesmile.share.views.LRTextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/gmail"
            android:drawableTop="@drawable/facebook"
            android:textColor="@color/black_38"
            android:textSize="12sp"
            android:drawablePadding="15dp"
            android:id="@+id/share_gmail"
            android:layout_weight="1"
            android:gravity="center"
            />
    </LinearLayout>
</LinearLayout>