<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginEnd="16dp"
    card_view:cardCornerRadius="5dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <com.sharesmile.share.views.MRTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textSize="20sp"
            android:text="@string/awesome"
            android:gravity="center"
            android:textColor="@color/black_64"/>

        <com.sharesmile.share.views.MRTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/spread_love_message"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="12.5sp"
            android:textColor="@color/black_64" />

        <LinearLayout
            android:id="@+id/btn_rate_us_5"
            android:layout_width="190dp"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_corner_blue"
            android:orientation="horizontal"
            android:gravity="center">

            <com.sharesmile.share.views.MRTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_us_5"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:textAllCaps="true"/>

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginLeft="4dp"
                app:srcCompat="@drawable/ic_star_rate_yellow_18px"/>

        </LinearLayout>

        <com.sharesmile.share.views.MRButton
            android:id="@+id/btn_share_the_app"
            android:layout_width="190dp"
            android:layout_height="48dp"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_corner_blue"
            android:text="@string/share_the_app"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

</android.support.v7.widget.CardView>