<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginEnd="16dp"
    card_view:cardCornerRadius="5dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <com.sharesmile.share.views.MRTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/spread_the_love"
            android:gravity="center"
            android:textColor="@color/black_65"/>

        <com.sharesmile.share.views.MRTextView
            android:layout_width="match_parent"
            android:layout_height="113dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:padding="16dp"
            android:text="@string/rate_us_message"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="13sp"
            android:textColor="@color/black_65" />

        <com.sharesmile.share.views.MRButton
            android:id="@+id/btn_rate_us"
            android:layout_width="190dp"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_corner_blue"
            android:text="@string/rate_us"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

</android.support.v7.widget.CardView>